# ComputingArchitecture

ComputingArchitecture/: CMakeLists.txt
ComputingArchitecture/src/: Parallelepiped.cpp  Parallelepiped.h  Sphere.h  container.cpp
ComputingArchitecture/src/utils/: FigureUtils.h  FileUtils.cpp  FileUtils.h
ComputingArchitecture/tests/custom_tests/custom_1/: input.txt  output.txt  output_sorted.txt
ComputingArchitecture/tests/custom_tests/custom_2/: input.txt  output.txt  output_sorted.txt
ComputingArchitecture/tests/random_tests/random_1/: output.txt  output_sorted.txt
ComputingArchitecture/tests/random_tests/random_2/: output.txt  output_sorted.txt
ComputingArchitecture/tests/random_tests/random_3/: output.txt  output_sorted.txt
